Implementing parameters for LDA
Reference
- GibbsLDA++: A C/C++ Gibbs Sampling LDA
(http://sourceforge.net/projects/gibbslda/)

--- a/Core/Core/Core.csproj
+++ b/Core/Core/Core.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\DataTypes.cs" />
+    <Compile Include="Helper\ModelHelper.cs" />
+    <Compile Include="Model\LDA.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
